Fixing testing in Book and Author